Some major ui improvements

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /** @format */
 /* Fonts down below */
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&display=swap');
+@font-face {
+  font-family: 'Pixelify Sans';
+  src: url(PixelifySans.ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -23,7 +25,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  /* font-family: "Pixelify Sans", sans-serif; */
 }
 
 html /* Very useful simple line of code down below ✔*/ {
@@ -135,6 +136,9 @@ html /* Very useful simple line of code down below ✔*/ {
   margin-top: 20px;
   position: relative;
 }
+#Me a {
+  text-decoration: none;
+}
 #Me p {
   color: #fff;
 }
@@ -183,6 +187,9 @@ html /* Very useful simple line of code down below ✔*/ {
   cursor: pointer;
   font-size: 2em;
   transition: transform 1.5s;
+}
+.menu li {
+  cursor: pointer;
 }
 .menu.active .menuToggle {
   transform: rotate(315deg);
@@ -288,9 +295,23 @@ h1 span {
 }
 .AboutC1 {
   flex-basis: 55%;
+  display: grid;
+  gap: 0x;
+  row-gap: 0px;
+  justify-content: center;
+  align-items: center;
+  place-items: center;
+  width: 100%;
 }
 #Tino {
   width: 100%;
+}
+.quote {
+  font-size: 1.5rem;
+  background-image: linear-gradient(45deg, #001908, #000000, #001908);
+  padding: 5px;
+  margin: 10px;
+  border-radius: 10px;
 }
 .AboutC2 {
   flex-basis: 70%;
@@ -1262,9 +1283,9 @@ a {
 .modal-container-body {
   padding: 24px 32px 51px;
   overflow-y: auto;
-  font-family: Open-Sans, sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: start;
-  background-image: linear-gradient(to bottom, #011608, rgb(1, 32, 1));
+  background-color: #011608;
   color: #fff;
 }
 .modal-container-body h1,
@@ -1481,7 +1502,189 @@ body {
   scrollbar-width: thin; /* Make it thinner */
   scrollbar-color: black transparent; /* Black thumb, transparent track */
 }
+/* From Uiverse.io by Li-Deheng */
+#btn-message {
+  --text-color: rgb(255, 255, 255);
+  --bg-color-sup: #5e5e5e;
+  --bg-color: #000000;
+  --bg-hover-color: #000000;
+  --online-status: #00da00;
+  --font-size: 16px;
+  --btn-transition: all 0.2s ease-out;
+}
 
+.button-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: 400 var(--font-size) Helvetica Neue, sans-serif;
+  box-shadow: 0 0 2.17382px rgba(0, 0, 0, 0.049),
+    0 1.75px 6.01034px rgba(0, 0, 0, 0.07),
+    0 3.63px 14.4706px rgba(0, 0, 0, 0.091), 0 22px 48px rgba(0, 0, 0, 0.14);
+  background-color: var(--bg-color);
+  border-radius: 68px;
+  cursor: pointer;
+  padding: 6px 10px 6px 6px;
+  width: fit-content;
+  height: 40px;
+  border: 0;
+  overflow: hidden;
+  position: relative;
+  transition: var(--btn-transition);
+}
+
+.button-message:hover {
+  height: 56px;
+  padding: 8px 20px 8px 8px;
+  background-color: var(--bg-hover-color);
+  transition: var(--btn-transition);
+}
+
+.button-message:active {
+  transform: scale(0.99);
+}
+
+.content-avatar {
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  transition: var(--btn-transition);
+  position: relative;
+}
+
+.button-message:hover .content-avatar {
+  width: 40px;
+  height: 40px;
+}
+
+.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: var(--bg-color-sup);
+}
+
+.user-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.status-user {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  right: 1px;
+  bottom: 1px;
+  border-radius: 50%;
+  outline: solid 2px var(--bg-color);
+  background-color: var(--online-status);
+  transition: var(--btn-transition);
+  animation: active-status 2s ease-in-out infinite;
+}
+
+.button-message:hover .status-user {
+  width: 10px;
+  height: 10px;
+  right: 1px;
+  bottom: 1px;
+  outline: solid 3px var(--bg-hover-color);
+}
+
+.notice-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding-left: 8px;
+  text-align: initial;
+  color: var(--text-color);
+}
+
+.username {
+  letter-spacing: -6px;
+  height: 0;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: var(--btn-transition);
+}
+
+.user-id {
+  font-size: 12px;
+  letter-spacing: -6px;
+  height: 0;
+  opacity: 0;
+  transform: translateY(10px);
+  transition: var(--btn-transition);
+}
+
+.lable-message {
+  display: flex;
+  align-items: center;
+  opacity: 1;
+  transform: scaleY(1);
+  transition: var(--btn-transition);
+}
+
+.button-message:hover .username {
+  height: auto;
+  letter-spacing: normal;
+  opacity: 1;
+  transform: translateY(0);
+  transition: var(--btn-transition);
+}
+
+.button-message:hover .user-id {
+  height: auto;
+  letter-spacing: normal;
+  opacity: 1;
+  transform: translateY(0);
+  transition: var(--btn-transition);
+}
+
+.button-message:hover .lable-message {
+  height: 0;
+  transform: scaleY(0);
+  transition: var(--btn-transition);
+}
+
+.lable-message,
+.username {
+  font-weight: 600;
+}
+
+.number-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: 8px;
+  font-size: 12px;
+  width: 16px;
+  height: 16px;
+  background-color: var(--bg-color-sup);
+  border-radius: 20px;
+}
+
+/*==============================================*/
+@keyframes active-status {
+  0% {
+    background-color: var(--online-status);
+  }
+
+  33.33% {
+    background-color: #93e200;
+  }
+
+  66.33% {
+    background-color: #93e200;
+  }
+
+  100% {
+    background-color: var(--online-status);
+  }
+}
 /*-----------------------------------Responsive Design--------------------------------------------------------*/
 @media only screen and (min-width: 251px) and (max-width: 600px) /* 250px optimisation to come */ {
   .header {
