--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ html /* Very useful simple line of code down below ✔*/ {
   text-align: center;
   margin-top: 10px;
 }
+.leftText {
+  text-align: start;
+}
 #preloader {
   background-color: #000;
   background-image: url(Images/cat.gif);
