--- a/style.css
+++ b/style.css
@@ -383,12 +383,48 @@ h1 span {
 #Tino {
   width: 100%;
 }
-.quote {
-  font-size: 1.5rem;
-  background-image: linear-gradient(45deg, #001908, #000000, #001908);
-  padding: 5px;
-  margin: 10px;
+.profile-box {
+  position: relative;
+  border-radius: 20px;
+  transform-style: preserve-3d;
+}
+.profile-box .profile-card {
+  position: relative;
+  background: rgba(255, 255, 255, 0.5);
+  width: 300px;
+  min-height: 400px;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.75);
+  border-left: 1px solid rgba(255, 255, 255, 0.75);
+  border-radius: 20px;
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.05);
+  transform-style: preserve-3d;
+}
+.profile-elements {
+  position: absolute;
+  top: 50px;
+  left: -30px;
+  width: 100px;
+  height: 100px;
+  background: rgba(255, 255, 255, 0.1);
+  transform: translateZ(80px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.75);
+  border-left: 1px solid rgba(255, 255, 255, 0.75);
   border-radius: 10px;
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.05);
+}
+.profile-elements .bg::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: url(Images/Passion.png);
+  background-size: 60px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 0.5s;
 }
 .AboutC2 {
   flex-basis: 70%;
@@ -1851,6 +1887,8 @@ body {
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  border-bottom: 1px solid #444;
+  padding-bottom: 10px;
 }
 
 .footer-column ul {
