--- a/style.css
+++ b/style.css
@@ -720,8 +720,6 @@ h1 span {
 .row-2 {
   --delay: 1s;
 }
-
-/* Responsive design */
 @media (max-width: 600px) {
   .skill-card {
     padding: 15px;
@@ -1657,8 +1655,8 @@ h6 {
 #closeToS {
   display: none;
 }
-/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Contact Section<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-.Contacts {
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> My Socials Section<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+.Socials {
   width: 100vw;
   height: 100vh;
   padding: 10px;
@@ -1668,15 +1666,6 @@ h6 {
   text-align: center;
   font-family: var(--secondaryFont);
   overflow-x: hidden;
-}
-#contactContainer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
 }
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Contact btns<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
@@ -2297,9 +2286,19 @@ body {
   .skill-card h3 {
     font-size: 1rem;
   }
+  .socialIconsCon {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 30px;
+  }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1000px) {
+  .socialIconsCon {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 30px;
+  }
   /* Preloader text */
   #Me h3,
   #Me h4 {
