--- a/style.css
+++ b/style.css
@@ -1114,15 +1114,11 @@ h1 span {
 }
 
 .project-preview img {
-  width: 100%;
+  width: 200px;
   height: auto;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
-}
-
-.project-preview img:hover {
-  transform: scale(1.05);
 }
 
 .project-buttons {
@@ -1161,7 +1157,7 @@ h1 span {
   }
 
   .project-preview img {
-    width: 100%;
+    width: 140px;
     height: auto;
   }
 }
