--- a/style.css
+++ b/style.css
@@ -1122,23 +1122,22 @@ h1 span {
 }
 
 .project-buttons {
+  position: relative;
   margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  align-items: start;
+  padding: 5px;
 }
 
-.project-buttons .button {
-  display: inline-block;
+.project-buttons .ui-btn {
   padding: 8px 15px;
   margin-right: 10px;
   text-decoration: none;
-  background: var(--primaryColor);
   color: var(--white);
   border-radius: 5px;
   transition: background 0.3s;
   font-size: 0.9rem;
-}
-
-.project-buttons .button:hover {
-  background: var(--darkPrimary);
 }
 
 @media screen and (max-width: 800px) {
