--- a/style.css
+++ b/style.css
@@ -403,6 +403,13 @@ h1 span {
   background: var(--brightGreen);
   transform: scale(1.1);
 }
+.about-container {
+  width: fit-content;
+  height: fit-content;
+  border: 1px solid var(--grey);
+  border-left: 5px solid var(--grey);
+  padding: 20px;
+}
 .AboutMe {
   text-align: start;
   background-color: rgb(0, 0, 0);
@@ -1114,7 +1121,7 @@ h1 span {
 }
 
 .project-preview img {
-  width: 200px;
+  width: 400px;
   height: auto;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -1156,7 +1163,7 @@ h1 span {
   }
 
   .project-preview img {
-    width: 140px;
+    width: 400px;
     height: auto;
   }
 }
@@ -1242,13 +1249,14 @@ h1 span {
 /* <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Thank you card<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< --> */
 
 #passionCard {
+  border: 1px solid var(--grey);
+  border-left: 5px solid var(--grey);
   width: 90%;
   max-width: 600px;
   height: 70%;
   max-height: 500px;
   position: fixed;
   background-color: var(--black);
-  border-radius: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
